@@ -46,8 +46,8 @@ siguin necessaris passos addicionals d'instal·lació i/o configuració.
 
 Amb les actuals eines *nix, es necessita tornar a partir el disc,
 creant al menys un sistema de fitxers i una partició d'intercanvi.
-Necessitareu al menys 350 MiB d'espai per una instal·lació de consola,
-o bé al menys 1 GiB si voleu instal·lar X (més si intenteu instal·lar
+Necessitareu al menys &base-system-size; MiB d'espai per una instal·lació de consola,
+o bé al menys &task-desktop-lxde-inst; MiB si voleu instal·lar X (més si intenteu instal·lar
 algun entorn d'escriptori com el GNOME o el KDE).
 
 </para><para>
