@@ -39,9 +39,9 @@ nastavení systému, je možné, že bude potřeba provést další kroky.
 
 Nejprve si rozdělte disk. Budete potřebovat aspoň jeden oddíl
 (kořenový) plus oblast pro virtuální paměť (swap). Pro čistě
-konzolovou instalaci potřebujete oblast velkou minimálně 350 MB,
+konzolovou instalaci potřebujete oblast velkou minimálně &base-system-size; MB,
 jestliže budete instalovat i X Window System, počítejte s nejméně
-1 GB.
+&task-desktop-lxde-inst; MB.
 
 </para><para>
 
