@@ -50,8 +50,8 @@ Installations- oder Konfigurationsschritte erforderlich sein.
 
 Benutzen Sie die *nix-Partitionierungsprogramme des vorhandenen Systems, um
 Ihre Festplatte nach Bedarf neu zu partitionieren; erstellen Sie zumindest
-ein neues Dateisystem plus Swap. Sie benötigen ungefähr 350MB Speicher für
-eine Nur-Konsolen-Installation oder ca. 1GB, wenn Sie vorhaben, X zu
+ein neues Dateisystem plus Swap. Sie benötigen ungefähr &base-system-size;MB Speicher für
+eine Nur-Konsolen-Installation oder ca. &task-desktop-lxde-inst;MB, wenn Sie vorhaben, X zu
 installieren (und noch mehr, wenn Sie Desktop-Umgebungen wie GNOME oder KDE
 installieren möchten).
 
