@@ -46,8 +46,8 @@ configuration steps may be needed.
 
 With your current *nix partitioning tools, repartition the hard
 drive as needed, creating at least one filesystem plus swap. You
-need around 350MB of space available for a console only install,
-or about 1GB if you plan to install X (more if you intend to
+need around &base-system-size;MB of space available for a console only install,
+or about &task-desktop-lxde-inst;B if you plan to install X (more if you intend to
 install desktop environments like GNOME or KDE).
 
 </para><para>
