@@ -43,8 +43,8 @@ seront sans doute nécessaires.
 
 Avec votre outil habituel de partitionnement *nix, partitionnez le disque
 dur et créez au moins un système de fichiers ainsi qu'une zone d'échange 
-(swap). Vous devez disposer d'au moins 350&nbsp;Mo pour
-l'installation d'un système en mode console et d'au moins 1&nbsp;Go si vous
+(swap). Vous devez disposer d'au moins &base-system-size;&nbsp;Mo pour
+l'installation d'un système en mode console et d'au moins &task-desktop-lxde-inst;&nbsp;Mo si vous
 avez l'intention d'installer X (et plus si vous voulez installer un environnement
 de bureau comme GNOME ou KDE).
 
