@@ -79,15 +79,15 @@ configurazione.
 <!--
 With your current *nix partitioning tools, repartition the hard
 drive as needed, creating at least one filesystem plus swap. You
-need around 350MB of space available for a console only install,
-or about 1GB if you plan to install X (more if you intend to
+need around &base-system-size;MB of space available for a console only install,
+or about &task-desktop-lxde-inst;GB if you plan to install X (more if you intend to
 install desktop environments like GNOME or KDE).
 -->
 
 Usando gli strumenti per il partizionamento disponibili, ripartizionare,
 secondo le proprie necessità, il disco fisso creando almeno un file system
 e una partizione di swap. Per un ambiente puramente testuale sono necessari
-350&nbsp;MB, 1&nbsp;GB se si intende installare X (ancora di più se si
+&base-system-size;&nbsp;MB, &task-desktop-lxde-inst;&nbsp;MB se si intende installare X (ancora di più se si
 installa un ambiente desktop come GNOME o KDE).
 
 </para><para>
