@@ -50,8 +50,8 @@ podem ser necessários.
 
 Com as ferramentas atuais de particionamento do *nix, reparticione o
 disco rígido como necessário, crie pelo menos um sistema de arquivos
-mais a partição swap. Você precisará por volta de 350MB de espaço disponível
-para a instalação somente da console ou algo como 1GB se planeja instalar
+mais a partição swap. Você precisará por volta de &base-system-size;MB de espaço disponível
+para a instalação somente da console ou algo como &task-desktop-lxde-inst;MB se planeja instalar
 o X (mais se você pretende instalar ambientes desktop como GNOME ou KDE).
 
 </para><para>
