@@ -35,6 +35,8 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Document that installing an MBR is needed to get a bootable USB key.
   * Add armhf, s390x architectures, comment hppa architecture.
   * Enable korean language.
+  * Use base-system-size and task-desktop-lxde-inst instead of hardcoding
+    install size in chroot method.
 
   [ Steve McIntyre ]
   * Make it clearer how we expect users to write CDs to USB sticks.
